--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
     margin: 0;
     padding: 0 10px;
     box-sizing: border-box;
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .container {
