--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Basic styles for the body and container */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Alef, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
